--- a/Gallary/GalaryStyle.css
+++ b/Gallary/GalaryStyle.css
@@ -1,3 +1,30 @@
+body{
+  background-color: #040c31;
+  color: #ebd02b;
+  font-family: cursive;
+}
+center {
+  background-color:#5d6174;
+}
+ul {
+  list-style: none;
+  padding: 0;
+}
+h3 {
+  text-shadow: 2px 2px #040c31;
+}
+#maggot img{
+  width: 50%;
+}
+a {
+  font-size: 30px;;
+}
+p{
+  font-size: 60px;
+  text-align: center;
+  text-shadow: 2px 2px red;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -11,4 +38,14 @@
     padding: 20px;
     font-size: 30px;
     text-align: center;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  li {
+    display: block;
+    padding: 10px 10px;
   }
