--- a/Gallary/GalaryStyle.css
+++ b/Gallary/GalaryStyle.css
@@ -3,8 +3,14 @@ body{
   color: #ebd02b;
   font-family: cursive;
 }
-center {
-  background-color:#5d6174;
+.pages center {
+  margin-left: 20%;
+  margin-right: 20%;
+}
+.logo center {
+  background-color: #5d6174;
+  border: 7px solid #ebd02b;
+  outline: 5px dotted red;
 }
 ul {
   list-style: none;
@@ -48,4 +54,11 @@ p{
   li {
     display: block;
     padding: 10px 10px;
+  }
+  a {
+    color: yellow;
+  }
+  .luca img {
+    border: 7px solid #ebd02b;
+    outline: 3px dashed red;
   }
