--- a/about/about.css
+++ b/about/about.css
@@ -3,9 +3,6 @@ body{
     color: #ebd02b;
     font-family: cursive;
 }
-center{
-    background-color:#5d6174;
-}
 ul {
     list-style: none;
     padding: 0;
@@ -29,7 +26,20 @@ p img {
 }
 video{
     padding-left: 25%;
+    padding-right:25%;
 }
 a {
     color: hotpink;
 }
+.pages center {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  a {
+      color: yellow;
+  }
+  .logo center {
+    background-color: #5d6174;
+    border: 7px solid #ebd02b;
+    outline: 5px dotted red;
+  }
