--- a/index.css
+++ b/index.css
@@ -16,6 +16,10 @@ h3 {
 a {
     font-size: 30px;;
 }
+#warning p {
+    font-size: 20;
+    margin-top: -30px;
+}
 p{
     font-size: 60px;
     text-align: center;
@@ -35,4 +39,4 @@ p{
   }
   p img {
     margin-top: -50px;
-}
+  }
