--- a/Forum/forum.css
+++ b/Forum/forum.css
@@ -1,7 +1,7 @@
 body{
     background-color: #040c31;
     color: #ebd02b;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 ul {
     list-style: none;
