--- a/Forum/signup.css
+++ b/Forum/signup.css
@@ -1,6 +1,6 @@
 body{
     background-color: #040c31;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
     color: #ebd02b;
 }
 .logo center {
